[package]
name = "pop3-codec"
version = "0.1.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serdex  = ["serde"]
utils   = ["md5"]

[dependencies]
abnf-core = "0.4"
nom       = "6"

# Optional
md5   = { version = "*", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
