[package]
name = "pop3-codec"
description = "Low-level POP3 Parser and Serializer"
keywords = ["email", "pop3", "parser", "codec"]
version = "0.3.0"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/pop3-codec"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serdex  = ["serde"]
utils   = ["md5"]

[dependencies]
abnf-core = "0.5"
nom       = "7"

# Optional
md5   = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
